--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -38,6 +38,7 @@ jobs:
           IMAGE_TAG: $${ github.sha }}
         run: |
           pwd
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          ls
+          docker build -t 378842471989.dkr.ecr.us-east-1.amazonaws.com/ecs-website-images:${IMAGE_TAG} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
