--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -14,6 +14,10 @@ jobs:
   ecs-deployment:
     name: ECS-Deployment
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./Website
 
     steps:
       - name: Checkout (copy repo to runner)
@@ -37,8 +41,7 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: $${ github.sha }}
         run: |
-          pwd
           ls
-          docker build -t 378842471989.dkr.ecr.us-east-1.amazonaws.com/ecs-website-images:${IMAGE_TAG} .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
