--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -42,6 +42,6 @@ jobs:
           IMAGE_TAG: $${ github.sha }}
         run: |
           ls
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t 378842471989.dkr.ecr.us-east-1.amazonaws.com/ecs-website-images:v2 .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
