Fix: docker build error 5

--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -39,9 +39,9 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-          IMAGE_TAG: $${ github.sha }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           ls
-          docker build -t 378842471989.dkr.ecr.us-east-1.amazonaws.com/ecs-website-images:v2 .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
