--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -50,7 +50,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ./task-definition.json
           container-name: bernatei-website
           image: ${{ steps.build-image.outputs.image }}
 
