--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+          PLAN: "terraform\n${{ steps.tf-plan.outputs.stdout }}"
         with:
           script: |
             const output = `#### Terraform Format and Style 🖌\`${{ steps.tf-fmt.outcome }}\`
