--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Terraform Apply
         id: tf-apply
-        if: ${{ github.event.pull_request.merged == true }}
+        if: github.event.pull_request.merged == true
         run: terraform apply --auto-approve -input=false
 
           
