--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -62,6 +62,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ecs-svc-test
+          service: ecs-fargate-service
           cluster: ecs-fargate-cluster
           wait-for-service-stability: true
