--- a/.github/workflows/ecs.yaml
+++ b/.github/workflows/ecs.yaml
@@ -34,16 +34,37 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to AWS ECR
+      ##- name: Build, tag, and push image to AWS ECR
+      ##  id: build-image
+      ##  env:
+      ##    ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      ##    ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      ##    IMAGE_TAG: ${{ github.sha }}
+      ##  run: |
+      ##    docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+      ##    docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      ##    echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Build image
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: "0"
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Push to ECR
+        id: push-image
+        uses: rgarcia-phi/gh-ecr-push@v1
+        env:
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        with:
+          access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: us-east-1
+          image: $ECR_REPOSITORY:1
+          is-semver: true # will push my-image:1, my-image:1.2 and my-image:1.2.3
 
       - name: Download task definition
         run: |
