--- a/.github/workflows/counter.yaml
+++ b/.github/workflows/counter.yaml
@@ -10,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: .github/workflows
+        working-directory: .github/workflows/
 
     steps:
       - name: Get global counter
-        run: cat counter.json | jq .counter
+        run: |
+          ls -l 
+          cat counter.json | jq .counter
 
       - name: Increment global counter
         run: |
